Corrected bug in showing SIDS/STARS so that changing Selected items actually works.  (Still need to correct total count at bottom).  Added parser for Navigraph files (in debug phase).

--- a/Form1.resx
+++ b/Form1.resx
@@ -915,7 +915,7 @@
         rkJggg==
 </value>
   </data>
-  <data name="TxtToolStripButton.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+  <data name="ESEToolStripButton.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAArAAAAJCCAYAAAA4HvSkAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
         YQUAAAAJcEhZcwAADsMAAA7DAcdvqGQAAB6lSURBVHhe7dy/6395etbxQMxGjVvEgJVKOtHGHygiCipa
